[0, 15, 93]: 2019-04-21
  - fix failure to parse empty implicit flow mapping key
  - in YAML 1.1 plains scalars `y`, 'n', `Y`, and 'N' are now
    correctly recognised as booleans and such strings dumped quoted
    (reported by `Marcel Bollmann
    <https://bitbucket.org/%7Bd8850921-9145-4ad0-ac30-64c3bd9b036d%7D/>`__)

[0, 15, 93]: 2019-04-21
  - fix failure to parse empty implicit flow mapping key
  - in YAML 1.1 plains scalars `y`, 'n', `Y`, and 'N' are now
    correctly recognised as booleans and such strings dumped quoted
    (reported by `Marcel Bollmann
    <https://bitbucket.org/%7Bd8850921-9145-4ad0-ac30-64c3bd9b036d%7D/>`__)

[0, 15, 92]: 2019-04-16
  - fix failure to parse empty implicit block mapping key (reported by 
    `Nolan W <https://bitbucket.org/i2labs/>`__)

[0, 15, 91]: 2019-04-05
  - allowing duplicate keys would not work for merge keys (reported by mamacdon on
    `StackOverflow <https://stackoverflow.com/questions/55540686/>`__ 

[0, 15, 91]: 2019-04-05
  - allowing duplicate keys would not work for merge keys (reported by mamacdon on
    `StackOverflow <https://stackoverflow.com/questions/55540686/>`__ 

[0, 15, 90]: 2019-04-04
  - fix issue with updating `CommentedMap` from list of tuples (reported by 
    `Peter Henry <https://bitbucket.org/mosbasik/>`__)

[0, 15, 90]: 2019-04-04
  - fix issue with updating `CommentedMap` from list of tuples (reported by 
    `Peter Henry <https://bitbucket.org/mosbasik/>`__)

[0, 15, 89]: 2019-02-27
  - fix for items with flow-mapping in block sequence output on single line
    (reported by `Zahari Dim <https://bitbucket.org/zahari_dim/>`__)
  - fix for safe dumping erroring in creation of representereror when dumping namedtuple
    (reported and solution by `Jaakko Kantojärvi <https://bitbucket.org/raphendyr/>`__)

[0, 15, 88]: 2019-02-12
  - fix inclusing of python code from the subpackage data (containing extra tests,
    reported by `Florian Apolloner <https://bitbucket.org/apollo13/>`__)
