@@ -1,3 +1,8 @@
+[0, 15, 94]: 2019-04-23
+  - fix missing line-break after end-of-file comments not ending in
+    line-break (reported by `Philip Thompson
+    <https://bitbucket.org/%7Be42ba205-0876-4151-bcbe-ccaea5bd13ce%7D/>`__)
+
 [0, 15, 93]: 2019-04-21
   - fix failure to parse empty implicit flow mapping key
   - in YAML 1.1 plains scalars `y`, 'n', `Y`, and 'N' are now
